# fastapi-accelerator

./: .env.example  .gitignore  CLAUDE.md  JIM_QUESTIONS.md  QUESTIONS.md  README.md  TODO.md  WRISTBAND_SETUP_STEPS.md  WRISTBAND_STEPS.md  firestore.indexes.json  package-lock.json
backend/: .gitignore  Dockerfile  deploy.sh  notebook.ipynb  pyproject.toml  run.py  run_live_tests.py  test_api_responses.py
backend/deployment/: deploy-backend-prod.sh  deploy-backend-staging.sh  deploy-backend.sh
backend/scripts/: README.md  run_get_user_info.py  run_get_user_nickname.py  run_query_new_user_invitation_requests.py  run_query_tenant_roles.py  run_query_tenant_users.py  run_query_tenant_users_roles.py  run_update_user_nickname.py  test.py
backend/service_accounts/: cloud-run-service-account-key.json  firebase-service-account-key.json
backend/src/: environment.py
backend/src/api/: __init__.py
backend/src/auth/: wristband.py
backend/src/clients/: wristband_client.py
backend/src/database/: doc_store.py  firestore_database.py
backend/src/models/: game.py  identity_provider.py  idp.py  invite.py  role.py  secret.py  secrets.py  tenant.py  tenant_option.py  user.py
backend/src/routes/: __init__.py  auth_routes.py  game_routes.py  idp_routes.py  nickname_routes.py  role_routes.py  secret_routes.py  tenant_routes.py  user_routes.py  users_routes.py
backend/src/services/: encryption_service.py  wristband_service.py
backend/src/utils/: singelton.py
backend/tests/: conftest.py
backend/tests/clients/: __init__.py  test_wristband_client.py
frontend/: .gitignore  (+9 more)
(+193 files in other folders)
